erDiagram

    %% ═══════════════════════════════════════════════════
    %% ERD 6 of 6: PUBLIC PORTAL
    %% DWA V&V System — Presentation View
    %% ═══════════════════════════════════════════════════
    %% AMENDED 2026-03-24: Protest→Objection; HDI indicator added
    %% REVIEWED 2026-04-01: CatchmentArea not exposed to public portal — internal org hierarchy only

    PublicUser {
        Guid PublicUserId PK
        string EmailAddress "login credential"
        string PasswordHash
        string FirstName
        string LastName
        string IdentityNumber "SA ID or Passport"
        string BusinessRegistrationNumber
        string PhoneNumber
        bool EmailConfirmed
        bool MfaEnabled "mandatory before case access"
        string Status "Pending|Active|Suspended|Deactivated"
        DateTime RegistrationDate
        bool IsHDI "[AMENDED 2026-03-24] Historically Disadvantaged Individual"
    }

    Property {
        Guid PropertyId PK
        string SGCode
        string PropertyReferenceNumber
    }

    FileMaster {
        Guid FileMasterId PK
        string RegistrationNumber
    }

    ApplicationUser {
        Guid ApplicationUserId PK
        string FirstName
        string LastName
    }

    PublicUserProperty {
        Guid Id PK
        Guid PublicUserId FK
        Guid PropertyId FK
        Guid ApprovedByUserId FK "DWS Validator"
        DateTime ApprovedDate
        string Status "Pending|Approved|Rejected"
    }

    Document {
        Guid DocumentId PK
        string DocumentType
        string FileName
        string BlobPath
    }

    CaseComment {
        Guid CommentId PK
        Guid FileMasterId FK
        Guid PublicUserId FK "nullable - external author"
        Guid ApplicationUserId FK "nullable - DWS author"
        string AuthorType "PublicUser|DWSOfficial"
        Guid ParentCommentId FK "nullable - for threading"
        string CommentText
        DateTime SubmittedDate
        DateTime ReadByDWSDate "set when DWS first views"
        DateTime ReadByPublicUserDate "set when user first views reply"
    }

    Objection {
        Guid ObjectionId PK "[AMENDED 2026-03-24]"
        Guid FileMasterId FK
        Guid PublicUserId FK
        DateTime LodgedDate
        string Status "Lodged|UnderReview|Resolved|Dismissed"
        string ResolutionNotes
    }

    ObjectionDocument {
        Guid Id PK "[AMENDED 2026-03-24]"
        Guid ObjectionId FK
        Guid DocumentId FK
    }

    Notification {
        Guid NotificationId PK
        Guid ApplicationUserId FK "internal user - nullable"
        Guid PublicUserId FK "external user - nullable"
        Guid FileMasterId FK "nullable - case context"
        string NotificationType "WorkflowStep|Letter|CaseStatus|Comment|Upload|Objection|System [AMENDED 2026-03-24]"
        string Subject
        string Body
        string ActionUrl "deep link"
        DateTime CreatedDate
        DateTime ReadDate
        bool IsRead
        bool EmailSent
        DateTime EmailSentDate
        bool SmsSent "for critical notifications"
        DateTime SmsSentDate
    }

    %% ── Relationships ──

    PublicUser ||--o{ PublicUserProperty : "has linked properties"
    Property ||--o{ PublicUserProperty : "linked to"
    PublicUserProperty }o--|| ApplicationUser : "approved by DWS"

    CaseComment }o--|| FileMaster : "is on"
    CaseComment }o--o| PublicUser : "posted by external"
    CaseComment }o--o| ApplicationUser : "posted by DWS"
    CaseComment }o--o| CaseComment : "reply to (threaded)"

    Objection }o--|| FileMaster : "is against [AMENDED 2026-03-24]"
    Objection }o--|| PublicUser : "lodged by [AMENDED 2026-03-24]"
    Objection ||--o{ ObjectionDocument : "has supporting docs [AMENDED 2026-03-24]"
    ObjectionDocument }o--|| Document : "is [AMENDED 2026-03-24]"

    Notification }o--o| PublicUser : "sent to external"
    Notification }o--o| ApplicationUser : "sent to internal"

    Document }o--o| PublicUser : "uploaded by external"
